Laboratorio 1/shapes/doc/logfile.txt
Class documentation
<---- javadoc command: ---->
D:\BlueJ\jdk\bin\javadoc.exe
-author
-version
-nodeprecated
-package
-Xdoclint:none
-noindex
-notree
-nohelp
-nonavbar
-source
11
-classpath
D:\BlueJ\lib\bluejcore.jar;D:\BlueJ\lib\junit-4.11.jar;D:\BlueJ\lib\hamcrest-core-1.3.jar;D:\BlueJ\lib\lang-stride.jar;D:\BlueJ\lib\javafx\lib\javafx.base.jar;D:\BlueJ\lib\javafx\lib\javafx.controls.jar;D:\BlueJ\lib\javafx\lib\javafx.fxml.jar;D:\BlueJ\lib\javafx\lib\javafx.graphics.jar;D:\BlueJ\lib\javafx\lib\javafx.media.jar;D:\BlueJ\lib\javafx\lib\javafx.properties.jar;D:\BlueJ\lib\javafx\lib\javafx.swing.jar;D:\BlueJ\lib\javafx\lib\javafx.web.jar;D:\Documents\Universidad\POOB 2020-2\Laboratorio 1\shapes
-d
D:\Documents\Universidad\POOB 2020-2\Laboratorio 1\shapes\doc
-encoding
UTF-8
-charset
UTF-8
D:\Documents\Universidad\POOB 2020-2\Laboratorio 1\shapes\PoligonalPuzzle.java
<---- end of javadoc command ---->
Loading source file D:\Documents\Universidad\POOB 2020-2\Laboratorio 1\shapes\PoligonalPuzzle.java...
D:\Documents\Universidad\POOB 2020-2\Laboratorio 1\shapes\PoligonalPuzzle.java:57: error: illegal start of expression
        }
        ^
1 error
